<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Tetris</string>
    <string name="action_settings" >Settings</string>
    <string name="hello_world" >Hello world!</string>
    <string name="version">ver: 0.1 BETA</string>
    <string name="profile">User Profile:</string>
    <string name="new_game">New Game</string>
    <string name="show_shadow">Show Shadow</string>
    <string name="cooperative">Cooperative</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="status_connected">Status: Connected</string>
    <string name="saved_profiles">Saved Profiles</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="select_device">Select Device</string>
    <string name="no_profile_saved">There is NO saved profiles!</string>
    <string name="main_menu">Main Menu</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="hello_user">Hello $user</string>
    <string name="help">Help</string>
    <string name="difficult">Difficult</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="available_devices">Available Devices:</string>
    <string name="start_scan">Start Scan</string>
    <string name="host">Host Game</string>
    <string name="join">Join Game</string>
    <string name="scanning">Scanning...</string>
    <string name="none_paired">No devices have been paired!</string>
    <string name="none_found">no device found</string>

</resources>
