<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:background="@drawable/general_bg">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/txt_main_menu_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:textSize="24.5sp"
                    android:textColor="@color/menu_title"
                    android:text="@string/main_menu" />
            <TextView
                    android:id="@+id/txt_main_menu_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="20dp"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:textColor="@color/menu_submenu"
                    android:text="@string/hello_user" />

            <Button
                    android:id="@+id/btn_main_menu_single"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:text="@string/singleplayer"/>

            <Button
                    android:id="@+id/btn_main_menu_multi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:text="@string/multiplayer"/>

            <Button
                    android:id="@+id/btn_main_menu_manage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:text="@string/manage_profiles"/>

            <Button
                    android:id="@+id/btn_main_menu_settings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:text="@string/action_settings"/>

            <Button
                    android:id="@+id/btn_main_menu_leader"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:text="@string/leaderboard"/>

            <Button
                    android:id="@+id/btn_main_menu_help"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:text="@string/help"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:id="@+id/txt_main_menu_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="14sp"
            android:text="@string/version" />
</RelativeLayout>