<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:background="@drawable/general_bg">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_newgame_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="25dp"
            android:text="@string/new_game"
            android:textSize="25sp"
            android:textColor="@color/menu_title"/>

        <TextView
            android:id="@+id/txt_newgame_profile"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="10dp"
            android:paddingBottom="20dp"
            android:text="@string/profile"
            android:textSize="18sp"
            android:textColor="@color/menu_submenu"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#999"/>

        <TextView
            android:id="@+id/txt_newgame_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:max="10"
            android:progress="4"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <SeekBar
                android:id="@+id/seekb_newgame_difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:max="10"
                android:progress="2"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#999"/>

        <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/txt_newgame_showshadow"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/show_shadow"
                android:textColor="@color/menu_submenu"
                android:textSize="18sp"/>

            <CheckBox
                android:id="@+id/checkbox_newgame_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="20dp"
                android:layout_centerVertical="true"/>

                </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#999"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            <TextView
                    android:id="@+id/txt_newgame_cooperative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/cooperative"
                    android:textColor="@color/menu_submenu"
                    android:textSize="18sp"/>
        <CheckBox
                android:id="@+id/checkbox_newgame_cooperative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="20dip"/>
        </RelativeLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="#999"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="60dp"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:id="@+id/btn_newgame_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/start" />
            <Button
                    android:id="@+id/btn_newgame_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/back" />

        </LinearLayout>

    </LinearLayout>

    <TextView
            android:id="@+id/txt_start_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="18sp"
            android:textColor="@color/green_ok"
            android:text="@string/status_connected" />

</RelativeLayout>